# convDirect

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  Makefile  README.md  directConvolution_Test.sh  do_plots.py  run_all.sh
src/: CMakeLists.txt  arrays.h  colors.h  compute_kernel_6x12.h  compute_kernel_7x12.h  convDirect.c  convDirect.h  convDirect_info.c  convdirect.c  convdirect.h.in  convdirect_options.h.in  driver_convDirect.c  dtypes.h  formats.h  gemm_blis_neon_fp32.c  gemm_blis_neon_fp32.h  gemm_reference.c  gemm_reference.h  inutils.c  inutils.h  macros.h  qblis.h  sutils.c  sutils.h
src/algorithms/: CMakeLists.txt  algorithms.h  blocks_sizes.h  buffers.c  buffers.h  convdirect_block.c  convdirect_block_blis.c  convdirect_block_blis.h  convdirect_block_shalom.c  convdirect_conv_gemm.c  convdirect_im2row.c  convdirect_original.c  convdirect_renamed.c  convdirect_reorder.c  convdirect_tzemeng.c  im2row.c  im2row.h  packrb.c  packrb.h
src/algorithms/ukrs/: compute_kernel_4x20.h  compute_kernel_6x12.h  compute_kernel_6x16.h  compute_kernel_7x12.h  gemm_blis_neon_fp32.c  gemm_blis_neon_fp32.h  load_6x16_asm.c  load_7x12_asm.c  micro_6x16_asm_unroll_4.c  micro_7x12_asm_unroll_4.c  store_6x16_asm.c  store_7x12_asm.c
test/: medium
test/cnn/: resnet50  resnet50-t16
tests/: CMakeLists.txt  array_utils.c  array_utils.h  convDirect_eval.c  convDirect_eval.sh  convDirect_eval_all.sh  convDirect_eval_all_process.py  input_utils.c  input_utils.h  small_manual_test.c
tests/batch/: large  small
tests/cnn/: Resnet50-imagenet  Vgg16-imagenet
tests/cnn_generators/: Googlelenet-imagenet  README.rst  Resnet50-imagenet  googlelenet_generator.py  pydtnn_googlelenet_conv2d_layers.txt  pydtnn_resnet50v15_conv2d_layers.txt  resnet50v15_generator.py  vgg16_generator.py
tvm/: Makefile  cpp_deploy.cc  microkernel_generator.py
